--- a/bib/journal_papers.bib
+++ b/bib/journal_papers.bib
@@ -765,7 +765,7 @@
 	pages = {acs.jnatprod.4c00184},
 	journaltitle = {Journal of Natural Products},
 	shortjournal = {J Nat Prod},
-	author = {Cancelarich, Natalia L. and Arrulo, Miriam and Gugliotti, Sariah Trillo and Barbosa, Eder A and Moreira, Daniel C. and Basso, Néstor G. and Pérez, Luis Orlando and Teixeira, Cátia and Gomes, Paula and De La Torre, Beatriz G. and Albericio, Fernando and Eaton, Peter and Leite, José R. S. A. and Marani, Mariela M.},
+	author = {Cancelarich, Natalia L. and Arrulo, Miriam and Gugliotti, Sariah Trillo and Barbosa, Eder A and Moreira, D. C. and Basso, Néstor G. and Pérez, Luis Orlando and Teixeira, Cátia and Gomes, Paula and De La Torre, Beatriz G. and Albericio, Fernando and Eaton, Peter and Leite, José R. S. A. and Marani, Mariela M.},
 	urldate = {2024-07-14},
 	date = {2024-06-20},
 	langid = {english},
